--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
             <li class="_menu-item">Why Hosterr</li>
            
         </ul>
-        <div>
+        <div class="_side-buttons">
             <link class="_menu-item">Sign in</link>
             <button class="_action-button">
                 Join Waitlist
@@ -31,16 +31,15 @@
         </div>
     </header>
     <main class="_container">
-        <section class="_main-container">
+        <section class="_info-container">
             <h1>Host your website in less than 5 minutes.</h1>
             <p class="_description">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Corrupti, eaque? Provident eligendi in hic nam, distinctio culpa.
-                Praesentium natus, corrupti quasi perspiciatis quidem voluptates 
-                voluptas recusandae explicabo aliquam. Soluta, necessitatibus!
+                Praesentium natus. 
             </p>
             <div class="_news-container">
-                <input type="text">
+                <input type="text" placeholder="Enter e-mail address">
                 <button class="_action-button">
                     Join Waitlist
                 </button>
@@ -50,8 +49,14 @@
                 <p class=""> No span, ever. Unscribe anytime</p>
             </div>
         </section>
-        <section class="_main-container">
-            <img src="./Assets/Hero Image (Model).png"/>
+        <section class="_image-container">
+            <div class="_first-layer">
+                <div class="_second-layer">
+                    <div class="_third-layer">
+                        <img src="./Assets/Hero Image (Model).png"/>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
@@ -60,13 +65,13 @@
             <li class="_social-item">Intagram</li>
             <li class="_social-item">Twitter</li>
         </ul>
-        <div class="chat">
+        <div class="_chat">
             <img src="./Assets/Help Avatar.svg" alt="" class="_profile-picture">
             <div class="_text">
                 <p class="_have-questions">
                     Hava any questions?
                 </p>
-                <p class="_have-questions _bold">
+                <p class="_talk">
                     Talk to a specialist
                 </p>
             </div>
